Ajuste para cerrar y abrir la ruta
se hicieron algunos ajustes para poder cerrar la ruta desde el panel de
cobrador y como abrirla el admin

--- a/src/app/admin/pages/resumen/resumen.component.html
+++ b/src/app/admin/pages/resumen/resumen.component.html
@@ -1,8 +1,8 @@
 <div class="card" *ngIf="!loading">
   <div class="flex flex-column gap-2">
     <app-panel-ruta
-      *ngFor="let ruta of rutas"
-      [ruta]="ruta"
+      *ngFor="let ruta of user.rutas"
+      [ruta]='ruta'
     ></app-panel-ruta>
   </div>
 </div>
