--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -76,7 +76,7 @@
         class="col"
         pButton
         label="Cerrar Ruta"
-        (click)="confirm($event)"
+        (click)="cerrarRuta()"
       >
 
       </button>
@@ -84,7 +84,6 @@
 
   </div>
 </div>
-<p-confirmPopup></p-confirmPopup>
 <ng-template #loading>
   <div class="loading">
     <p-progressSpinner></p-progressSpinner>
