--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="main" *ngIf="!loading">
+<div class="main">
   <form (submit)="login()" [formGroup]="formLogin">
     <div class="grid">
       <div class="p-inputgroup">
