--- a/src/app/admin/pages/login/login.component.html
+++ b/src/app/admin/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="card text-layout">
+<div class="card text-layout h-screen">
   <div 
     class="card-container flex flex-column align-items-center justify-content-center p-3 border-round-sm"
     [ngStyle]="{backgroundColor: '#1F2D40'}">
