--- a/src/app/admin/layout/app.topbar.component.html
+++ b/src/app/admin/layout/app.topbar.component.html
@@ -20,7 +20,7 @@
             <i class="pi pi-calendar"></i>
             <span>Calendario</span>
         </button>
-        <button class="p-link layout-topbar-button">
+        <button class="p-link layout-topbar-button" routerLink='/admin/perfil'>
             <i class="pi pi-user"></i>
             <span>Perfil</span>
         </button>
