--- a/src/app/main/pages/aditar-pago/editar-pago.component.html
+++ b/src/app/main/pages/aditar-pago/editar-pago.component.html
@@ -1,4 +1,4 @@
-<div class="card text-layout" *ngIf="pago">
+<div class="card" *ngIf="pago">
   <div class="contenedor p-3 card-container flex flex-column justify-content-center gap-2">
       <div class="header grid flex align-items-center">
         <div class="col">
