--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -1,4 +1,4 @@
-<div class="main text-layout" *ngIf="caja; else loading">
+<div class="card" *ngIf="caja; else loading">
   <div class="flex flex-column justify-content-center">
 
     <div class="grid">
