--- a/src/app/main/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/main/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -1,4 +1,4 @@
-<div class="main flex flex-column" *ngIf="!loading">
+<div class="card flex flex-column" *ngIf="!loading">
 
   <div class="header flex flex-row align-items-center justify-content-between">
     <button 
