--- a/src/app/main/pages/cliente/cliente.component.html
+++ b/src/app/main/pages/cliente/cliente.component.html
@@ -1,4 +1,4 @@
-<div class="main text-layout" *ngIf="cliente">
+<div class="card" *ngIf="cliente">
   <div class="card flex flex-column gap-1">
 
     <div class="title">
