--- a/src/app/main/pages/pago/pago.component.html
+++ b/src/app/main/pages/pago/pago.component.html
@@ -1,4 +1,4 @@
-<div class="main card text-layout p-3" *ngIf="credito; else loading">
+<div class="card p-3" *ngIf="credito; else loading">
   <div class="card-container overflow-hidden flex flex-column gap-1 justify-content-center">
 
     <div class="header grid flex align-items-center">
