--- a/src/app/main/pages/renovaciones/renovaciones.component.html
+++ b/src/app/main/pages/renovaciones/renovaciones.component.html
@@ -1,4 +1,4 @@
-<div class="main flex flex-column justify-content-center card-container blue-container gap-3">
+<div class="card flex flex-column justify-content-center card-container blue-container gap-3">
   <p-card *ngFor="let item of clientes; let i = index">
     <div class="flex flex-row justify-content-between align-content-center">
       <div class="flex align-items-center">
