--- a/src/app/main/pages/renovar/renovar.component.html
+++ b/src/app/main/pages/renovar/renovar.component.html
@@ -1,4 +1,4 @@
-<div class="main text-layout flex flex-column" *ngIf="!loading">
+<div class="card flex flex-column" *ngIf="!loading">
   <div class="flex flex-row justify-content-between align-items-center">
     <button
       pButton
