--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="card" *ngFor="let ruta of rutas">
   <div class="flex flex-row align-items-center justify-content-between">
-    <h5>{{ruta.nombre | titlecase}}</h5>
+    <h5 [routerLink]="['/admin/ruta', ruta.id]">{{ruta.nombre | titlecase}}</h5>
     <span class="p-buttonset">
       <button 
         pButton 
