--- a/src/app/components/credito-table/credito-table.component.html
+++ b/src/app/components/credito-table/credito-table.component.html
@@ -2,7 +2,28 @@
   [value]="creditos" 
   styleClass="p-datatable-striped" 
   responsiveLayout="scroll"
-  *ngIf="creditos">
+  *ngIf="creditos"
+  [globalFilterFields]="['cliente.alias', 'pagos[0]']">
+
+  <ng-template pTemplate="header">
+    <tr>
+      <th pSortableColumn="cliente.alias">
+        <div class="flex justify-content-between align-items-center">
+          Alias
+          <p-sortIcon field="cliente.alias"></p-sortIcon>
+          <p-columnFilter type="text" field="cliente.alias" display="menu" class="ml-auto"></p-columnFilter>
+        </div>
+      </th>
+
+      <th pSortableColumn="pagos[0]">
+        <div class="flex justify-content-between align-items-center">
+          Fecha de pago
+          <p-sortIcon field="pagos[0]"></p-sortIcon>
+          <p-columnFilter type="text" field="pagos[0]" display="menu" class="ml-auto"></p-columnFilter>
+        </div>
+      </th>
+    </tr>
+  </ng-template>
 
   <ng-template pTemplate="body" let-credito>
     <tr [routerLink]="['/main/pago', credito.id]" class="pointer">
