--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="card" *ngFor="let ruta of rutas">
   <div class="flex flex-row align-items-center justify-content-between">
     <h5 [routerLink]="['/admin/ruta', ruta.id]">{{ruta.nombre | titlecase}}</h5>
