--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,6 +3,7 @@
   <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
     <div class="text-center mb-5">
         <div class="text-900 text-3xl font-medium mb-3">Bienvenido</div>
+        <span>Cobrador</span>
     </div>
     <div>
       <form 
