--- a/src/app/main/pages/rutero/rutero.component.html
+++ b/src/app/main/pages/rutero/rutero.component.html
@@ -9,10 +9,11 @@
 </div>
 
 <div 
-  class="loading flex flex-column justify-content-center"
+  class="card"
   *ngIf="loading">
-  <p-progressSpinner></p-progressSpinner>
-  <h3 class="text-layout">Espere...</h3>
+  <div class="loading">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
 </div>
 
 <div 
