--- a/src/app/components/credito-table/credito-table.component.html
+++ b/src/app/components/credito-table/credito-table.component.html
@@ -1,4 +1,4 @@
-<p-table 
+<!-- <p-table 
   [value]="creditos" 
   styleClass="p-datatable-striped" 
   responsiveLayout="scroll"
@@ -32,4 +32,17 @@
     </tr>
   </ng-template>
   
-</p-table>
+</p-table> -->
+<div class="main">
+  <div *ngFor="let credito of creditos" class="credito" [routerLink]="['/main/pago', credito.id]">
+    <div class="header">
+      <p class="alias" [style]="{'fontSize': '1.2em', 'fontWeight': 'bold'}">{{credito.cliente.alias | titlecase}}</p>
+      <p class="v_cuota">{{credito.valor_cuota | currency:'GTQ'}}</p>
+    </div>
+
+    <div class="content">
+      <p class="fecha_inicio">{{credito.fecha_inicio}}</p>
+      <p class="saldo">{{credito.saldo | currency:'GTQ'}}</p>
+    </div>
+  </div>
+</div>
