--- a/src/app/main/pages/verificados/verificados.component.html
+++ b/src/app/main/pages/verificados/verificados.component.html
@@ -1,4 +1,4 @@
-<p-table 
+<!-- <p-table 
   [value]="pagos" 
   *ngIf="pagos.length > 0" 
   styleClass="p-datatable-striped" 
@@ -24,7 +24,26 @@
 
 </p-table>
 
-<div class="loading" *ngIf="loading">
-  <p-progressSpinner></p-progressSpinner>
-  <h3 class="text-layout">Espera...</h3>
+ -->
+
+<div class="card" *ngIf="!loading">
+  <div class="main">
+    <div *ngFor="let pago of pagos" class="credito" [routerLink]="['/main/pago/editar', pago.id]">
+      <div class="header">
+        <p class="alias" [style]="{'fontSize': '1.2em', 'fontWeight': 'bold'}">{{pago.cliente.alias | titlecase}}</p>
+        <p class="v_cuota">{{pago.valor | currency:'GTQ'}}</p>
+      </div>
+
+      <div class="content">
+        <p class="fecha_inicio">{{pago.fecha}}</p>
+        <p class="saldo">{{pago.credito.saldo | currency:'GTQ'}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card" *ngIf="loading">
+  <div class="loading">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
 </div>
