--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,8 @@ $gutter: 1rem; //for primeflex grid system
 /* Demos */
 // @import "assets/demo/styles/flags/flags.css";
 // @import "assets/demo/styles/badges.scss";
+.loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
