--- a/src/app/components/credito-table/credito-table.component.css
+++ b/src/app/components/credito-table/credito-table.component.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: 2px 2px 10px rgba(0,0,0,.2);
+  cursor: pointer;
 }
 
 .header, .content{
@@ -23,4 +24,8 @@
   color: #1DA750;
   font-size: 1.3em;
   font-weight: bold;
+}
+
+.c_pendientes {
+  text-align: end;
 }
