--- a/src/app/components/gastos/gastos.component.html
+++ b/src/app/components/gastos/gastos.component.html
@@ -10,7 +10,7 @@
       </p-dropdown>
 
       <p-inputNumber mode="currency" class="w-full" currency="GTQ" [formControl]="valor" locale="es-GT" [min]="0"
-        placeholder="Ejemplo: Q.30.00">
+        placeholder="Ejemplo: $30.00">
       </p-inputNumber>
 
       <textarea pInputTextarea cols="30" rows="5" [formControl]="nota" [autoResize]="true"
