--- a/src/app/components/inversiones/inversiones.component.html
+++ b/src/app/components/inversiones/inversiones.component.html
@@ -12,7 +12,7 @@
         [formControl]="valor"
         locale="es-GT"
         [min]="0"
-        placeholder="Ejemplo: Q.30.00"
+        placeholder="Ejemplo: $30.00"
       >
       </p-inputNumber>
       <textarea 
