--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -9,47 +9,47 @@
 
     <div class="grid">
       <div class="col flex justify-content-end">Base: </div>
-      <div class="col">{{caja.base | currency:'GTQ'}}</div>
+      <div class="col">{{caja.base | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Inversion: </div>
-      <div class="col">{{caja.inversion | currency:'GTQ'}}</div>
+      <div class="col">{{caja.inversion | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Retiro: </div>
-      <div class="col">{{caja.retiro | currency:'GTQ'}}</div>
+      <div class="col">{{caja.retiro | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Gastos: </div>
-      <div class="col">{{caja.gasto | currency:'GTQ'}}</div>
+      <div class="col">{{caja.gasto | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Pretendido: </div>
-      <div class="col">{{caja.pretendido | currency:'GTQ'}}</div>
+      <div class="col">{{caja.pretendido | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Cobro: </div>
-      <div class="col">{{caja.cobro | currency:'GTQ'}}</div>
+      <div class="col">{{caja.cobro | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Extra: </div>
-      <div class="col">{{caja.extra | currency:'GTQ'}}</div>
+      <div class="col">{{caja.extra | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Total Cobrado: </div>
-      <div class="col">{{(caja.cobro + caja.extra) | currency:'GTQ'}}</div>
+      <div class="col">{{(caja.cobro + caja.extra) | currency:'$'}}</div>
     </div>
 
     <div class="grid">
       <div class="col flex justify-content-end">Prestamo: </div>
-      <div class="col">{{caja.prestamo | currency:'GTQ'}}</div>
+      <div class="col">{{caja.prestamo | currency:'$'}}</div>
     </div>
 
     <div class="grid">
@@ -74,7 +74,7 @@
     
     <div class="grid">
       <div class="col flex justify-content-end">Caja final: </div>
-      <div class="col">{{caja.caja_final | currency:'GTQ'}}</div>
+      <div class="col">{{caja.caja_final | currency:'$'}}</div>
     </div>
 
     <div class="grid mt-2">
