--- a/src/app/main/pages/pago/pago.component.html
+++ b/src/app/main/pages/pago/pago.component.html
@@ -24,22 +24,22 @@
 
       <div class="grid">
         <div class="col flex justify-content-end">Prestado</div>
-        <div class="col">{{credito.valor_credito | currency:'GTQ'}}</div>
+        <div class="col">{{credito.valor_credito | currency:'$'}}</div>
       </div>
 
       <div class="grid">
         <div class="col flex justify-content-end">Total a Pagar</div>
-        <div class="col">{{credito.total_pagar | currency:'GTQ'}}</div>
+        <div class="col">{{credito.total_pagar | currency:'$'}}</div>
       </div>
 
       <div class="grid">
         <div class="col flex justify-content-end">Abonos</div>
-        <div class="col">{{credito.abonos | currency:'GTQ'}}</div>
+        <div class="col">{{credito.abonos | currency:'$'}}</div>
       </div>
 
       <div class="grid">
         <div class="col flex justify-content-end">Saldo</div>
-        <div class="col">{{credito.saldo | currency:'GTQ'}}</div>
+        <div class="col">{{credito.saldo | currency:'$'}}</div>
       </div>
 
       <div class="grid">
@@ -49,7 +49,7 @@
 
       <div class="grid">
         <div class="col flex justify-content-end">Valor Cuota</div>
-        <div class="col">{{credito.valor_cuota | currency:'GTQ'}}</div>
+        <div class="col">{{credito.valor_cuota | currency:'$'}}</div>
       </div>
 
       <div class="grid">
@@ -104,7 +104,7 @@
           <ng-template pTemplate="body" let-pago>
             <tr>
               <td>{{pago.fecha}}</td>
-              <td>{{pago.valor | currency:'GTQ'}}</td>
+              <td>{{pago.valor | currency:'$'}}</td>
             </tr>
           </ng-template>
           
