--- a/src/app/main/pages/cliente-nuevo/cliente-nuevo.component.html
+++ b/src/app/main/pages/cliente-nuevo/cliente-nuevo.component.html
@@ -20,7 +20,7 @@
       <input 
         type="text" 
         pInputText
-        placeholder="Dpi"
+        placeholder="Documento"
         formControlName="dpi">
 
         <input 
