--- a/src/app/main/pages/caja/caja.component.html
+++ b/src/app/main/pages/caja/caja.component.html
@@ -37,7 +37,7 @@
       <div class="col">{{caja.cobro | currency:'$'}}</div>
     </div>
 
-    <div class="grid">
+    <!-- <div class="grid">
       <div class="col flex justify-content-end">Extra: </div>
       <div class="col">{{caja.extra | currency:'$'}}</div>
     </div>
@@ -45,7 +45,7 @@
     <div class="grid">
       <div class="col flex justify-content-end">Total Cobrado: </div>
       <div class="col">{{(caja.cobro + caja.extra) | currency:'$'}}</div>
-    </div>
+    </div> -->
 
     <div class="grid">
       <div class="col flex justify-content-end">Prestamo: </div>
